--- a/merge.ipynb
+++ b/merge.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 121,
    "metadata": {
     "collapsed": false
    },
@@ -13,82 +13,73 @@
     "pd.options.display.max_rows=99\n",
     "import numpy as np\n",
     "\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "\n",
+    "def tab_df(df_file,n):\n",
+    "    df_array=[]\n",
+    "    with open (df_file) as f:\n",
+    "        l=0\n",
+    "        for line in f:\n",
+    "            row=((line.split('\\t')))\n",
+    "            if len(row)==n:\n",
+    "                df_array.append(row)\n",
+    "                l+=1\n",
+    "    columns=df_array[0]\n",
+    "    df_array.pop(0)\n",
+    "    df=pd.DataFrame(df_array,columns=columns)\n",
+    "    print df.shape\n",
+    "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 122,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(301286, 52)"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(301286, 52)\n"
+     ]
     }
    ],
    "source": [
     "path=\"../data/\"\n",
     "cvr_file=path+'CVR_LOBBY_DISCLOSURE_CD.TSV'\n",
-    "cvr_array=[]\n",
-    "with open (cvr_file) as f:\n",
-    "    l=0\n",
-    "    for line in f:\n",
-    "        row=((line.split('\\t')))\n",
-    "        if len(row)==52:\n",
-    "            cvr_array.append(row)\n",
-    "            l+=1\n",
-    "columns=cvr_array[0]\n",
-    "cvr_array.pop(0)\n",
-    "cvr=pd.DataFrame(cvr_array,columns=columns)\n",
-    "cvr.shape"
+    "cvr=tab_df(cvr_file,52)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 111,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(466026, 26)"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "pay_file=path+'LPAY_CD.TSV'\n",
-    "pay_array=[]\n",
-    "with open (pay_file) as f:\n",
-    "    l=0\n",
-    "    for line in f:\n",
-    "        row=((line.split('\\t')))\n",
-    "        if len(row)==26:\n",
-    "            pay_array.append(row)\n",
-    "            l+=1\n",
-    "columns=pay_array[0]\n",
-    "pay_array.pop(0)\n",
-    "pay=pd.DataFrame(pay_array,columns=columns)\n",
-    "pay.shape"
+    "pay=tab_df(pay_file,26)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 120,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "summ_file=path+'SMRY_CD.TSV'\n",
+    "summ=tab_df(sum_file,9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
    "metadata": {
     "collapsed": false
    },
@@ -103,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 113,
    "metadata": {
     "collapsed": true
    },
@@ -114,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 114,
    "metadata": {
     "collapsed": false
    },
@@ -125,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 115,
    "metadata": {
     "collapsed": false
    },
@@ -136,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 116,
    "metadata": {
     "collapsed": false
    },
@@ -147,7 +138,7 @@
        "(23386, 54)"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 117,
    "metadata": {
     "collapsed": false
    },
@@ -167,10 +158,10 @@
     {
      "data": {
       "text/plain": [
-       "(23386, 57)"
+       "(23386, 56)"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 118,
    "metadata": {
     "collapsed": false
    },
@@ -193,7 +184,7 @@
        "(11336, 56)"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
